[package]
name = "sender-sink"
version = "0.2.0"
authors = ["Toby Grasl <herblet@knowledge42.com>"]
edition = "2018"
description = "Utility classes for working with tokio UnboundedSender and the Sink trait."
homepage = "https://github.com/herblet/sender-sink"
license = "MIT"
repository = "https://github.com/herblet/sender-sink"

[dependencies]
tokio = { version = "1", features = ["sync"] }
futures = { version = "0.3", default-features = false, features = ["std"] }

[dev-dependencies]
tokio = { version = "1", features = ["rt","macros"] }